2009-07-27 Sarka Todorova <sarka.todorova@cern.ch>
	* fix unidentified RPC layers
	* averaged spacer beams had an active label - fixed !
	* tagged as MuonTrackingGeometry-00-05-22

2009-07-20 Sarka Todorova <sarka.todorova@cern.ch>
	* fpe fix 
	* tagged as MuonTrackingGeometry-00-05-19/20/21

2009-07-13 Sarka Todorova <sarka.todorova@cern.ch>
	* mdt id fixed (ROE shift wrt station) 
	* tagged as MuonTrackingGeometry-00-05-18

2009-06-22 Sarka Todorova <sarka.todorova@cern.ch>
	* downscale messages 
	* tagged as MuonTrackingGeometry-00-05-17

2009-06-15 Sarka Todorova <sarka.todorova@cern.ch>
	* averaged spacer option 
	* tagged as MuonTrackingGeometry-00-05-15/16

2009-06-12 Sarka Todorova <sarka.todorova@cern.ch>
	* memory leak in spacer
	* tagged as MuonTrackingGeometry-00-05-14

2009-06-09 Sarka Todorova <sarka.todorova@cern.ch>
	* reorganize active material options
	* add statistics for frame partition
	* tagged as MuonTrackingGeometry-00-05-13

2009-06-08 Sarka Todorova <sarka.todorova@cern.ch>
	* fix thickness of spacer beam
	* tagged as MuonTrackingGeometry-00-05-12

2009-06-05 Sarka Todorova <sarka.todorova@cern.ch>
	* fix calculation of span for cylinders
	* tagged as MuonTrackingGeometry-00-05-11

2009-06-05 Sarka Todorova <sarka.todorova@cern.ch>
	* adjust hardcoded partition ( cryoring leaking ...)
	* tagged as MuonTrackingGeometry-00-05-10

2009-06-04  David Rousseau  <droussea@lxbuild084.cern.ch>
	* python/ConfiguredMuonTrackingGeometry.py : no more printout of Configurable 
	* tagged as MuonTrackingGeometry-00-05-09
	
2009-06-04 Sarka Todorova <sarka.todorova@cern.ch>
	* bugfixes (averaged layer material, span )
	* tagged as MuonTrackingGeometry-00-05-07

2009-05-12 Sarka Todorova <sarka.todorova@cern.ch>
	* release blended material objects from memory (option)
	* tagged as MuonTrackingGeometry-00-05-06

2009-05-07 Sarka Todorova <sarka.todorova@cern.ch>
	* MGM/MuonReadoutGeometry dependence
	* tagged as MuonTrackingGeometry-00-05-05
