@@ -1,3 +1,8 @@
+2009-08-30  RD Schaffer  <R.D.Schaffer@cern.ch>
+
+	* tagged as MuonTrackingGeometry-00-05-23
+	* src/MuonStationBuilder.cxx: added fixes for moving to 64-bit ids
+
 2009-07-27 Sarka Todorova <sarka.todorova@cern.ch>
 	* fix unidentified RPC layers
 	* averaged spacer beams had an active label - fixed !
